@@ -1,3 +1,5 @@
+[B]1.0.7[/B]
+- oldalváltozás lekövetve
 [B]1.0.6[/B]
 - video link quote_plus fix
 [B]1.0.5[/B]
